[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.ibc_gamm_osmosis]
codegen-units = 1
incremental = false

[profile.release.package.pool_manager]
codegen-units = 1
incremental = false

[profile.release.package.pool_api]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
