[package]
name = "pool_api"
version = "0.0.0"
edition = "2018"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# Change this to [] if you don't need Windows support and want faster integration tests.
default = ["cranelift"]
# Use cranelift backend instead of singlepass. This is required for development on Windows.
cranelift = ["cosmwasm-vm/cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta6", features = ["stargate", "iterator", "staking"]}
cosmwasm-storage = { version = "1.0.0-beta6", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "0.10.3" 
sha2 = "0.10.1"
hex = "0.3.1"
prost = "0.9"
prost-types = "0.9"
cosmos-sdk-proto = { version = "0.9", default-features = false, path = "../../packages/cosmos-sdk-proto" }
cosmos-types = { version = "0.9", path = "../../packages/cosmos-types" }
chain-query = { version = "0.9", path = "../../packages/chain-query" }


[dev-dependencies]
cosmwasm-vm = { version = "1.0.0-beta6" , default-features = false, features = ["iterator", "stargate"] }
cosmwasm-schema = "1.0.0-beta6"
